--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_editor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_editor.html
@@ -18,7 +18,7 @@
 
 {% trans var_placeholder as content %}
 
-<textarea id="ckeditor_textarea"  name="{{var_name}}" placeholder="{% blocktrans %}  {{content}} {% endblocktrans %}" value="{{var_value}}" rows="10" cols="80"> {{var_value}} </textarea>
+<textarea id="ckeditor_textarea"  class="ckeditor_textarea" name="{{var_name}}" placeholder="{% blocktrans %}  {{content}} {% endblocktrans %}" value="{{var_value}}" rows="10" cols="80"> {{var_value}} </textarea>
 
 <div id="group_imgs_on_modal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog" >
 </div>
