extra print stmnt removed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
@@ -101,12 +101,12 @@
 
           </div>
           <div class="discussion-footer">
-            <a class="reply-btn"  data-id='{{ each_reply.oid }}' onclick='openCKEditor($(this),"{{each_reply.oid}}")' data-org-content='{{ each_reply.content }}'>
+            <a class="reply-btn reply_res"  data-id='{{ each_reply.oid }}' onclick='openCKEditor($(this),"{{each_reply.oid}}")' data-org-content='{{ each_reply.content }}'>
               <i class="fa fa-reply"></i>
               {% trans "Reply" %} 
             </a>
             {% if request.user.id == each_reply.userid or is_gstaff %}
-              <a class="reply-btn" data-userid="{{each_reply.userid}}" onclick="deleteReply($(this))" style="float:right">
+              <a class="reply-btn delete_res" data-id='{{ each_reply.oid }}' data-userid="{{each_reply.userid}}" onclick="deleteReply($(this))" style="float:right">
                 <i class="fa fa-trash-o"></i>
                 {% trans "Delete" %}
               </a>
@@ -274,11 +274,11 @@
               + "</div>"
           + "<div class='discussion-content' data-reply-id='"+ data[1] +"'>"+ data[3] + "</div>"
           + "<div class='discussion-footer'>"
-                + "<a class='reply-btn'  data-id='" + data[1] + "' onclick='openCKEditor($(this))' data-org-content='"+data[3]+"'>"
+                + "<a class='reply-btn reply_res'  data-id='" + data[1] + "' onclick='openCKEditor($(this))' data-org-content='"+data[3]+"'>"
                + "<i class='fa fa-reply'></i> Reply"
                + "</a>"
               if (request_user_id == reply_user_id){
-                  htmlReply +="<a class='reply-btn' data-userid='"+ data[5] +"' onclick='deleteReply($(this))' style='float:right'><i class='fa fa-trash-o'></i> Delete"
+                  htmlReply +="<a class='reply-btn delete_res' data-id='" + data[1]+ "'data-userid='"+ data[5] +"' onclick='deleteReply($(this))' style='float:right'><i class='fa fa-trash-o'></i> Delete"
                   htmlReply +="<a class='reply-btn edit_res' data-id='"+ data[1] +"' data-userid='{{each_reply.userid}}' data-userid='"+ data[5] +"' onclick='editreply($(this))' style='float:right;margin-right:10px!important'><i class='fa fa-pencil-square-o'></i> Edit"
                   }
           +"</div>"   
@@ -470,6 +470,15 @@
 
 function editreply(sourceObj){
 //alert(sourceObj);
+  var sourceObjDataId = $(sourceObj).attr("data-id");
+  curr_thread = $('.reply-btn[data-id='+ sourceObjDataId +']');
+  edit_res = curr_thread.closest('.edit_res');
+  reply_res = curr_thread.closest('.reply_res');
+  delete_res = curr_thread.closest('.delete_res');
+  delete_res.hide();
+  edit_res.hide();
+  reply_res.hide();
+
   var curr_data_id = sourceObj.attr('data-id');
 
    if(checkCurrEdit()){
@@ -478,12 +487,11 @@ function editreply(sourceObj){
   
   var parent_div = sourceObj.parent();
 
-    parent_div.append("<a class='reply-btn save_res' onclick='save_reply($(this))' data-id='" + curr_data_id + "' style='float:right;margin-right:10px!important'>Save</a>");
+    parent_div.append("<a class='reply-btn save_res' onclick='save_reply($(this))' data-id='" + curr_data_id + "' style='float:right;margin-right:10px!important'><i class='fa fa-floppy-o'></i>Save</a>");
  
-  var sourceObjDataId = $(sourceObj).attr("data-id");
   var group_id = "{{group_id}}";
   $.ajax({
-          url: "{% url 'inline_edit_comment' group_id 'None' %}",
+          url: "{% url 'edit_comment' group_id 'None' %}",
 
           type: "GET",
 
@@ -515,7 +523,7 @@ function save_reply(sourceObj){
         var content_val = CKEDITOR.instances['ckeditor_textarea'].getData();
         $( ".cke_button__closebtn_label" ).trigger( "click" );
         $.ajax({
-          url: "{% url 'inline_edit_comment' group_id 'None' %}",
+          url: "{% url 'edit_comment' group_id 'None' %}",
 
           data: {
             content_val: content_val,
@@ -531,6 +539,15 @@ function save_reply(sourceObj){
             $('.save_res').remove();
             var node_to_update = $('.discussion-content[data-reply-id='+ sourceObjDataId +']');
             $(node_to_update).html(content_val);
+            curr_thread = $('.reply-btn[data-id='+ sourceObjDataId +']');
+            edit_res = curr_thread.closest('.edit_res');
+            reply_res = curr_thread.closest('.reply_res');
+            delete_res = curr_thread.closest('.delete_res');
+            
+            reply_res.show();
+            edit_res.show();
+            delete_res.show();
+
           },
         });//end of ajax
 
