--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_fields.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_fields.html
@@ -74,42 +74,19 @@
     
     {% include 'ndf/widget_selector.html' with for=fields_name all_options=all_items selected_options=drawer_items %}
     
-  {% endif %}
-
-
-  {% if fields_name == "member_of" %} 
+  {% elif fields_name == "member_of" or fields_name == "type_of" %} 
     
     {% include 'ndf/widget_selector.html' with for=fields_name all_options=all_items selected_options=drawer_items %}
 
+  {% elif fields_name == "prior_node" %} 
+  {% get_selected_drawer_items fields_name fields_value as drawer_items %}
 
-  {% endif%}
-
-
-  {% if fields_name == "type_of" %} 
-
-    {% include 'ndf/widget_selector.html' with for=fields_name all_options=all_items selected_options=drawer_items %}
-
-  {% endif%}
-
-
-
-  {% if fields_name == "prior_node" %} 
   {% get_all_priornode_items fields_name fields_value as all_prior_items %}
-    {{all_prior_items}}
-
-    {{drawer_items}}
 
     {% include 'ndf/widget_selector.html' with for=fields_name all_options=all_prior_items selected_options=drawer_items %}
 
   {% endif %}
 
-
-  {% if fields_name in field_type_list %}
-
-  <script type="text/javascript">
-   type_list.push("{{fields_name}}");
-  </script>
-  {% endif %}
 </div>
 
 
