Get returned thread node is in discussion template ajax call create_discussion

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
@@ -149,6 +149,12 @@
          }
         $.ajax({
           url: "{% url 'create_discussion' group_id node.pk %}",
+          data: {
+            'csrfmiddlewaretoken': "{{csrf_token}}"
+          },
+
+          type: "POST",
+
           success: function(data){
             data = JSON.parse(data);
             if( (data[0] == "thread-created") || (data[0] == "Thread-exist") )
@@ -177,7 +183,7 @@
                 });
 
 
-                $("#prior-node").val("{{ node.pk }}") // _id
+                $("#prior-node").val(data[1]) // _id
                 // $("input[data-id='{{ node.pk }}']").val("{{ node.pk }}") // _id
 
                 //$("#create-discussion").trigger("click");
