--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/registration/registration_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/registration/registration_form.html
@@ -208,7 +208,7 @@
 
     if(this.name == 'username')
     {
-      $(this).after("<small class='error'>Username should start with letters and can have digits and - / . / _  Lower case letters only</small>");
+      $(this).after("<small class='error'>Username should start with letters and can have digits and - / . / _ / Lower case letters only</small>");
     }
     else{
       $(this).after("<small class='error'>Please fill valid "+this.name+"</small>");
