regex changed for lower case

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/registration/registration_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/registration/registration_form.html
@@ -199,7 +199,7 @@
     }
     if(this.id == "id_username")
     {
-      $(this).attr("pattern", "^[a-z](([\._\-][a-zA-Z0-9])|[a-zA-Z0-9])*[a-z0-9]$");
+      $(this).attr("pattern", "^[a-z](([\._\-][a-z0-9])|[a-z0-9])*[a-z0-9]$");
     }
 
     $(this).css("width", "95%");
