--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
@@ -42,10 +42,10 @@
           Comment  {% if all_replies|length > 0 %} ({{all_replies|length }}) {% endif %}
         {% endif %}
       </div>
+      <div class="discussion-refresh right">
+        <small><a onclick="location.reload()">Refresh <i class="fi-refresh"></i></a></small>
+      </div>
     {% endif %}
-        <div class="discussion-refresh right">
-          <small><a onclick="location.reload()">Refresh <i class="fi-refresh"></i></a></small>
-        </div>
     </div>
 
     {% comment %}
@@ -77,7 +77,7 @@
             </div>
 
             </div>
-          <div class="discussion-content">
+          <div class="discussion-content" data-reply-id="{{ each_reply.oid }}">
             {{each_reply.HTMLcontent|safe }}
           {% for node in each_reply.collection_set  %}
             <div style="margin: 1em;">
@@ -101,14 +101,18 @@
 
           </div>
           <div class="discussion-footer">
-            <a class="reply-btn"  data-id='{{ each_reply.oid }}' onclick='openCKEditor($(this),"{{each_reply.oid}}")' data-org-content='{{ each_reply.content }}'>
+            <a class="reply-btn reply_res"  data-id='{{ each_reply.oid }}' onclick='openCKEditor($(this),"{{each_reply.oid}}")' data-org-content='{{ each_reply.content }}'>
               <i class="fa fa-reply"></i>
               {% trans "Reply" %} 
             </a>
             {% if request.user.id == each_reply.userid or is_gstaff %}
-              <a class="reply-btn" data-userid="{{each_reply.userid}}" onclick="deleteReply($(this))" style="float:right">
+              <a class="reply-btn delete_res" data-id='{{ each_reply.oid }}' data-userid="{{each_reply.userid}}" onclick="deleteReply($(this))" style="float:right">
                 <i class="fa fa-trash-o"></i>
                 {% trans "Delete" %}
+              </a>
+               <a class="reply-btn edit_res" data-id='{{ each_reply.oid }}' data-userid="{{each_reply.userid}}" onclick='editreply($(this))' style="float:right;margin-right:10px!important"> 
+                <i class="fa fa-pencil-square-o"></i>
+                {% trans "Edit" %} |
               </a>
             {% endif %}
           </div>
@@ -149,6 +153,12 @@
          }
         $.ajax({
           url: "{% url 'create_discussion' group_id node.pk %}",
+          data: {
+            'csrfmiddlewaretoken': "{{csrf_token}}"
+          },
+
+          type: "POST",
+
           success: function(data){
             data = JSON.parse(data);
             if( (data[0] == "thread-created") || (data[0] == "Thread-exist") )
@@ -177,7 +187,7 @@
                 });
 
 
-                $("#prior-node").val("{{ node.pk }}") // _id
+                $("#prior-node").val(data[1]) // _id
                 // $("input[data-id='{{ node.pk }}']").val("{{ node.pk }}") // _id
 
                 //$("#create-discussion").trigger("click");
@@ -264,17 +274,18 @@
       var htmlReply = "<div class='content' content-reply-id='"+ data[1] +"' data-reply-level=' "+ child_reply_level +" ' >"
           + "<div style='"+ replyStyle +"' data-reply-id='"+ data[1] +"' data-priornode-id='"+ data[2] +"' class='disc-replies'>"
               + "<div class='discussion-title row'>"
-                  + "<div class='discussion-title-username' style='margin-left:10px'>"
-                      + "<a style='color:#ADABAB!important;font-size:15px;'>" + data[6] + "</a><small style='float:right;color:#999999;padding-right:10px!important;'>"+data[7].toLowerCase()+"</small>"
+                  + "<div class='discussion-title-username'>"
+                      + "<a style='color:#ADABAB!important;font-size:15px;padding-left:10px!important;'>" + data[6] + "</a><small style='float:right;color:#999999'>"+data[7]+"</small>"
                   + "</div>"
               + "</div>"
-          + "<div class='discussion-content'>"+ data[3] + "</div>"
+          + "<div class='discussion-content' data-reply-id='"+ data[1] +"'>"+ data[3] + "</div>"
           + "<div class='discussion-footer'>"
-                + "<a class='reply-btn'  data-id='" + data[1] + "' onclick='openCKEditor($(this))' data-org-content='"+data[3]+"'>"
+                + "<a class='reply-btn reply_res'  data-id='" + data[1] + "' onclick='openCKEditor($(this))' data-org-content='"+data[3]+"'>"
                + "<i class='fa fa-reply'></i> Reply"
                + "</a>"
               if (request_user_id == reply_user_id){
-                  htmlReply +="<a class='reply-btn' data-userid='"+ data[5] +"' onclick='deleteReply($(this))' style='float:right'><i class='fa fa-trash-o'></i> Delete"
+                  htmlReply +="<a class='reply-btn delete_res' data-id='" + data[1]+ "'data-userid='"+ data[5] +"' onclick='deleteReply($(this))' style='float:right'><i class='fa fa-trash-o'></i> Delete"
+                  htmlReply +="<a class='reply-btn edit_res' data-id='"+ data[1] +"' data-userid='{{each_reply.userid}}' data-userid='"+ data[5] +"' onclick='editreply($(this))' style='float:right;margin-right:10px!important'><i class='fa fa-pencil-square-o'></i> Edit |"
                   }
           +"</div>"   
         +"</div>"
@@ -328,7 +339,7 @@
                 // add reply text content after #replies-area
                 var parent_margin_level = $(sourceObj).closest("div").attr("class");
                 
-                $("#replies-area").prepend(createReplyHTML('margin-top:25px;margin-left:0px;', data,1));
+                $("#replies-area").prepend(createReplyHTML('margin-top:25px;margin-left:0px', data,1));
                 // $(".content").appendChild().(createReplyHTML('margin-top:20px;', data)).fadeIn(8000);
               }
               else  // sub-reply
@@ -463,6 +474,97 @@
     }
   }
 
+function editreply(sourceObj){
+//alert(sourceObj);discussion-content" data-reply-id="{{ each_reply.oid }}
+  var sourceObjDataId = $(sourceObj).attr("data-id");
+  content_thread = $('.discussion-content[data-reply-id='+ sourceObjDataId +']');
+  curr_thread = $('.reply-btn[data-id='+ sourceObjDataId +']');
+  edit_res = curr_thread.closest('.edit_res');
+  reply_res = curr_thread.closest('.reply_res');
+  delete_res = curr_thread.closest('.delete_res');
+
+  content_thread.hide();
+  delete_res.hide();
+  edit_res.hide();
+  reply_res.hide();
+
+  var curr_data_id = sourceObj.attr('data-id');
+
+   if(checkCurrEdit()){
+           return false;
+     }
+  
+  var parent_div = sourceObj.parent();
+
+    parent_div.append("<a class='reply-btn save_res' onclick='save_reply($(this))' data-id='" + curr_data_id + "' style='float:right;margin-right:10px!important'><i class='fa fa-floppy-o'></i> Save</a>");
+ 
+  var group_id = "{{group_id}}";
+  $.ajax({
+          url: "{% url 'edit_comment' group_id 'None' %}",
+
+          type: "GET",
+
+          dataType: "html",
+
+          data: {
+              "csrfmiddlewaretoken": "{{ csrf_token }}",
+              "sourceObjDataId": sourceObjDataId,
+            },
+
+          success: function(data){
+             r = $('.reply-btn[data-id='+ sourceObjDataId +']');
+             p = r.closest('.disc-replies');
+             parent_marginleft = p.css("margin-left");
+             parent_marginleft = (parseFloat(parent_marginleft, 10)) + "px";
+             // alert("parent_marginleft"+parent_marginleft);
+             p.after('<div class="ckeditor-content-reply" style="margin-left:'+ parent_marginleft +'"><div class="ckeditor-reply-area"></div> <div class="post-btn-div"></div></div>');
+             $('.ckeditor-reply-area').html(data);
+             setCurrNodeEdit(1);
+             // $(sourceObj).append(data);
+          },
+        }); 
+  
+
+}
+
+function save_reply(sourceObj){
+        var sourceObjDataId = $(sourceObj).attr("data-id");
+        var content_val = CKEDITOR.instances['ckeditor_textarea'].getData();
+        $( ".cke_button__closebtn_label" ).trigger( "click" );
+        $.ajax({
+          url: "{% url 'edit_comment' group_id 'None' %}",
+
+          data: {
+            content_val: content_val,
+            'csrfmiddlewaretoken': "{{csrf_token}}",
+            'sourceObjDataId': sourceObjDataId,
+          },
+
+          type: "POST",
+
+          dataType: "html",
+
+          success: function(){
+            $('.save_res').remove();
+            var node_to_update = $('.discussion-content[data-reply-id='+ sourceObjDataId +']');
+            $(node_to_update).html(content_val);
+            content_thread = $('.discussion-content[data-reply-id='+ sourceObjDataId +']');
+            curr_thread = $('.reply-btn[data-id='+ sourceObjDataId +']');
+            edit_res = curr_thread.closest('.edit_res');
+            reply_res = curr_thread.closest('.reply_res');
+            delete_res = curr_thread.closest('.delete_res');
+            
+            content_thread.show();
+            reply_res.show();
+            edit_res.show();
+            delete_res.show();
+
+          },
+        });//end of ajax
+
+}
+
 
 </script>
+
 
