--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/adminDashboardCreate.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/adminDashboardCreate.html
@@ -190,12 +190,17 @@
 	
 	$("form").submit(function(event) {
 		flag = 0;
-		var memb = getSelValuesHiddenElement('member_of','{{class_name}}');
-		var meta = getSelValuesHiddenElement('meta_type_set','{{class_name}}');
-		var ats = getSelValuesHiddenElement('attribute_type_set','{{class_name}}');
-		var rts = getSelValuesHiddenElement('relation_type_set','{{class_name}}');
-		var typ = getSelValuesHiddenElement('type_of','{{class_name}}');
-		var prn = getSelValuesHiddenElement('prior_node','{{class_name}}');
+		var memb = getSelValuesHiddenElement('member_of','{{class_name}}-member_of');
+		var meta = getSelValuesHiddenElement('meta_type_set','{{class_name}}-meta_type_set');
+		var ats = getSelValuesHiddenElement('attribute_type_set','{{class_name}}-attribute_type_set');
+		var rts = getSelValuesHiddenElement('relation_type_set','{{class_name}}-relation_type_set');
+		var typ = getSelValuesHiddenElement('type_of','{{class_name}}-type_of');
+		var prn = getSelValuesHiddenElement('prior_node','{{class_name}}-prior_node');
+
+			<!--for(each in type_list){-->
+			<!--	eval(type_list[each] + "()");-->
+			<!--} -->
+			<!-- this code was used to fetch drawer_widget code and then eval it. -->
 
 		for(reqfields in required_fields){
 			if($("#definitionlist [name = "+required_fields[reqfields]+" ]").val()){
