--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_selector.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_selector.html
@@ -254,6 +254,9 @@ HOW TO USE
 
   // sItems = $sa("#to-be-selected .item");
   var sItems = $sa('#' + selectorWidgetID + ' .to-be-selected' + ' .item');
+
+  var oneline_element = "{{oneline_element}}";
+  console.log(oneline_element)
   
   function removeTag(){
 
@@ -463,8 +466,14 @@ HOW TO USE
     console.log(hiddenInput)
     hiddenInput.type = 'hidden';
     hiddenInput.name = selectorWidgetFor;
-    hiddenInput.value = getSelectedValues(selectorWidgetFor);
-    // hiddenInput.value = JSON.stringify(getSelectedValues(selectorWidgetFor));
+    // hiddenInput.value = getSelectedValues(selectorWidgetFor);
+    // console.log(hiddenInput.value)
+    if (oneline_element) {
+      hiddenInput.value = JSON.stringify(getSelectedValues(selectorWidgetFor));
+    } else {
+      hiddenInput.value = getSelectedValues(selectorWidgetFor);
+    }
+
 
     if (idToAppend) {
       // document.getElementById(idToAppend).appendChild(hiddenInput.value);
