--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_fields.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_fields.html
@@ -62,23 +62,23 @@
 {% elif fields_type == "list" %}
 <div id="list_drawer" style="border-spacing:0px;">
 
-  {% get_selected_drawer_items fields_name fields_value as drawer_items %}
-
-  {% get_all_drawer_items fields_name fields_value as all_items %}
   
   {% if fields_name == "subject_type" or fields_name == "language" or fields_name == "object_type" or fields_name == "applicable_node_type" or fields_name == "subject_applicable_nodetype" or fields_name == "object_applicable_nodetype" or fields_name == "data_type" %}
 
     {% list_widget fields_name fields_type fields_value  %}
 
-  {% elif fields_name == "relation_type_set" or fields_name == "attribute_type_set" or fields_name == "meta_type_set"  %}  
-    
-    {% include 'ndf/widget_selector.html' with for=fields_name all_options=all_items selected_options=drawer_items %}
-    
-  {% elif fields_name == "member_of" or fields_name == "type_of" %} 
-    
-    {% include 'ndf/widget_selector.html' with for=fields_name all_options=all_items selected_options=drawer_items %}
+  {% elif fields_name == "relation_type_set" or fields_name == "attribute_type_set" or fields_name == "meta_type_set" or fields_name == "member_of" or fields_name == "type_of" %}  
 
+  {% get_selected_drawer_items fields_name fields_value as drawer_items %}
+
+  {% get_all_drawer_items fields_name fields_value as all_items %}
+
+    <!-- The tags fetch selected items as drawer_items and rest all the items as all_items -->
+  
+    {% include 'ndf/widget_selector.html' with for=fields_name all_options=all_items selected_options=drawer_items %}
+    
   {% elif fields_name == "prior_node" %} 
+
   {% get_selected_drawer_items fields_name fields_value as drawer_items %}
 
   {% get_all_priornode_items fields_name fields_value as all_prior_items %}
@@ -86,6 +86,33 @@
     {% include 'ndf/widget_selector.html' with for=fields_name all_options=all_prior_items selected_options=drawer_items %}
 
   {% endif %}
+
+<!-- 
+  {% if fields_name in field_type_list %}
+  <input id="{{fields_name}}_type" type="hidden" name="{{fields_name}}" value="" />
+  <script type="text/javascript">
+    
+    function {{fields_name}}() {
+    type_arr = []
+    $(".node_id").each(function (){
+    if ($(this).parent(".bullet-item").parent("#{{fields_name}}_drawer2").attr("id") == "{{fields_name}}_drawer2") {
+    type_arr.push($(this).val());
+    }
+    });
+    $("#{{fields_name}}_type").val(type_arr)
+    }
+    type_list.push("{{fields_name}}");
+  </script>
+  {% endif %}
+
+{# The above code lines are to fetch the element from drawer_widget #}
+
+-->
+
+
+
+
+
 
 </div>
 
