--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_fields.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_fields.html
@@ -5,9 +5,7 @@
   .line-height-2 { line-height:2; }
   .line-height-2pt5 { line-height:2.5; }
   .fontsize-x-large { font-size: x-large; }
-  
   .margin-0 { margin: 0 !important ;}
-  
   .resource-drawer {
   border-color: #D3D3D3; border-style: solid;
   padding: 0 !important;
@@ -82,6 +80,7 @@
   {% get_selected_drawer_items fields_name fields_value as drawer_items %}
 
   {% get_all_priornode_items fields_name fields_value as all_prior_items %}
+    <!-- The tags fetch selected items as drawer_items and rest all the items as all_prior_items specifically for prior_node -->
 
     {% include 'ndf/widget_selector.html' with for=fields_name all_options=all_prior_items selected_options=drawer_items %}
 
@@ -108,12 +107,6 @@
 {# The above code lines are to fetch the element from drawer_widget #}
 
 -->
-
-
-
-
-
-
 </div>
 
 
