--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourse.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourse.html
@@ -1,6 +1,6 @@
 {# {% extends "ndf/gbase.html" %} #}
 {% load simple_filters %}
-{% xextends "ndf/gbase.html" with first_body_column=0 %}
+{% xextends "ndf/base.html" with first_body_column=0 %}
 <!-- to change the grid of main body content use following "instead" of above extends: -->
 
 {% load i18n %}
