--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
@@ -82,7 +82,7 @@
                   {% if is_gstaff or node.created_by == request.user.id %}
                       {% get_edit_url node.pk as edit_url %}
                       <small>
-                          <a title="Edit this {{node.member_of_names_list.0}}" class="edit_res">{% trans " Edit Content" %}</a>|
+                          <a title="Edit this {{node.member_of_names_list.0}}" class="edit_res_unit">{% trans " Edit Content" %}</a>|
                           <a title="Edit this {{node.member_of_names_list.0}}" class="edit_settings" href="{% url edit_url group_id node.pk %}">{% trans " Edit Settings" %}</a>
                       </small>
                   {% endif %}
@@ -161,7 +161,7 @@
         $(this).nextAll().add($(this)).addClass('rated');
     });
 
-    $(document).on('click',".edit_res",function(){
+    $(document).on('click',".edit_res_unit",function(){
         $.ajax({
           url: "{% url 'inline_edit_res' group_id node.pk %}",
 
@@ -171,14 +171,14 @@
 
           success: function(data){
             $(".node_details").html(data);
-            $(".edit_res").text("Save")
-                          .addClass("save_res")
-                          .removeClass("edit_res")
+            $(".edit_res_unit").text("Save")
+                          .addClass("save_res_unit")
+                          .removeClass("edit_res_unit")
           },
         });//end of ajax
     });
 
-    $(document).on('click',".save_res",function(){
+    $(document).on('click',".save_res_unit",function(){
         var content_val = CKEDITOR.instances['ckeditor_textarea'].getData();
         // content_val = CKEDITOR.instances.editor1.getData();
         // console.log(content_val)
@@ -197,9 +197,9 @@
 
           success: function(data){
             $(".node_details").html(data);
-            $(".save_res").text("Edit")
-                          .addClass("edit_res")
-                          .removeClass("save_res")
+            $(".save_res_unit").text("Edit")
+                          .addClass("edit_res_unit")
+                          .removeClass("save_res_unit")
           },
         });//end of ajax
 
