Replaced extending/inheriting parent gbase.html with base.html

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourse.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourse.html
@@ -1,4 +1,4 @@
-{# {% extends "ndf/gbase.html" %} #}
+{# {% extends "ndf/base.html" %} #}
 {% load simple_filters %}
 {% xextends "ndf/base.html" with first_body_column=0 %}
 <!-- to change the grid of main body content use following "instead" of above extends: -->
