--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -1,7 +1,7 @@
 {% load simple_filters %}
 {% xextends "ndf/base.html" with first_body_column=0 %}
 
-{# {% extends "ndf/gbase.html" %} #}
+{# {% extends "ndf/base.html" %} #}
 
 {% load i18n %}
 {% load cache %}
