Creating 'help' as a new group from filldb, if does not exists.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/nroer/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/nroer/styles.css
@@ -9379,7 +9379,7 @@ pre {
 
 /* line 190, ../../../scss/_app_styles.scss */
 body {
-  background-color: #EAEAEA;
+  background-color: #F2F2F2;
 }
 
 /* line 194, ../../../scss/_app_styles.scss */
