--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -188,7 +188,7 @@ pre{
 // ------| following style lines were there in _metastudio_styles.scss |------
 
 body{ 
-    background-color: #EAEAEA;
+    background-color: #F2F2F2;
 }
 
 #top-headers {
