--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
@@ -8,6 +8,7 @@
 {% check_is_gstaff groupid request.user as is_gstaff %}
 {% check_group node.pk as is_group %}
 {% check_is_user_group node.pk as is_user_group %}
+{% get_relation_value node.pk 'has_help' as help_node_and_grel %}
 <style type="text/css">
 	.right-btn, .left-btn{
 		/*float: left;*/
@@ -263,7 +264,7 @@
 			<!-- Location	-->
 				
 				{% if node.location %}
-		        	<a data-reveal-id="view-map-widget" class="lbl_field tag-rating-div" title={% trans "Click to view the location" %}><i class="fi-marker"></i> {% trans "Location" %}</a>
+		        	<a data-reveal-id="view-map-widget" class="lbl_field tag-rating-div" title='{% trans "Click to view the location" %}'><i class="fi-marker"></i> {% trans "Location" %}</a>
 	        	{% endif %}
 
 		    <!-- Graphs For Topics or Concept -->
@@ -295,8 +296,12 @@
 		        {% endif %}
 		      {% endif %}
 	        
-	
-		        
+			<!-- Help info page -->
+				{% if help_node_and_grel.0 %}
+					<div class="row tag-rating-div">
+						<a href="{% url 'page_details' groupid help_node_and_grel.0 %}" target="_blank" title='{% trans "Click to view help page" %}'>{% trans "Help" %}</a>
+					</div>
+				{% endif %}
 			{% endif %}
 
 			{% endif %}
